finish Question 1 - Preprocessing

--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -56,6 +56,10 @@
     "\n",
     "### Data Handline\n",
     "import pandas as pd\n",
+    "# avoid collapsed view for pandas dataframes\n",
+    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_columns', 500)\n",
+    "pd.set_option('display.width', 1000)\n",
     "import numpy as np\n",
     "\n",
     "### Utility\n",
@@ -211,10 +215,15 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b9ffc975",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# your code"
+    "df = pd.read_csv('./dataset/census_data.csv', index_col='CensusTract')\n",
+    "# I don't know if it is necessary to explicitely check if no index values appear twice, if yes use:\n",
+    "# index = list(df.index)\n",
+    "# len(index) != len(set(index))"
    ]
   },
   {
@@ -229,10 +238,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a10ed82",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "# your code"
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd6126f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -240,7 +263,7 @@
    "id": "279e874a",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "The column 'Employed' shows total number of people whereas 'Unemployment' shows the percentage of unemployed people. Also the columns 'Men' and 'Women' are given as floating point numbers even though they are a total count and only integers make sense."
    ]
   },
   {
@@ -260,7 +283,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "df = df.astype({\"State\":'category', \"County\":'category'})\n",
+    "# comment: I think county could actually be subcategories but this does not result in any memory improvements right?"
    ]
   },
   {
@@ -268,7 +292,7 @@
    "id": "7423b33c",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "Candidates for categorical columns are the Columns 'State' and 'County'."
    ]
   },
   {
@@ -298,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code (description)"
+    "df.describe()"
    ]
   },
   {
@@ -308,7 +332,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code (boxplots)"
+    "np.warnings.filterwarnings('ignore', category=np.VisibleDeprecationWarning) # to suppress a warning (maybe because i don't use provided env?)\n",
+    "df.boxplot(column=['TotalPop', 'Men', 'Women', 'Citizen', 'Employed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a80c0ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.boxplot(column=['Income', 'IncomePerCap'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0414dea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.boxplot(column=['Hispanic', 'White', 'Black', 'Native', 'Asian', 'Pacific'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08eb6bf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.boxplot(column=['PrivateWork', 'PublicWork', 'SelfEmployed', 'FamilyWork', 'Unemployment', 'Poverty', 'ChildPoverty'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c890b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.boxplot(column=['Professional', 'Service', 'Office', 'Construction', 'Production', 'Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp', 'WorkAtHome'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec7c5004",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.boxplot(column=['MeanCommute'])"
    ]
   },
   {
@@ -316,7 +391,7 @@
    "id": "bdb903e4",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "the minimum value is 0 -> there are censuses without any entries"
    ]
   },
   {
@@ -348,11 +423,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52e27eef",
+   "id": "cb9e9cdd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "num_total = len(df.columns)*len(df.index)\n",
+    "num_missing = df.isna().sum().sum()\n",
+    "print('Total number of entries: ', num_total)\n",
+    "print('Total number of missing entries: ', num_missing)\n",
+    "print('Percentage: ', num_missing/num_total*100)\n",
+    "print()\n",
+    "nan_sums_rows = df.isna().sum(axis=1)\n",
+    "num_rows_with_missing = len(df.index) - nan_sums_rows.value_counts()[0]\n",
+    "print('Number of rows with at least one missing value:', num_rows_with_missing)\n",
+    "print()\n",
+    "nan_sums_cols = df.isna().sum()\n",
+    "print('Missing values per column:')\n",
+    "print(nan_sums_cols)\n",
+    "print()\n",
+    "print('Missing values per row aggregated:')\n",
+    "print(nan_sums_rows.value_counts())"
    ]
   },
   {
@@ -360,7 +450,7 @@
    "id": "dc710a89",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "In total 22469 (~0.89%) of the values are missing distributed over 2008 rows. Most values are missing for columns 'Income' and 'ChildPoverty'. All values for the columns 'State', 'County', 'TotalPop', 'Citizen' and 'Employed' are available. Most rows have no missing values. If there are missing values it seems to be either very little (1-3) or many at once (20 or 27)."
    ]
   },
   {
@@ -381,15 +471,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# get rows with zero population\n",
+    "zero_pop = df.copy(deep=True)\n",
+    "zero_pop = zero_pop[zero_pop.TotalPop == 0]\n",
+    "print('There are {} rows with 0 population'.format(len(zero_pop)))\n",
+    "print('number of NaN values per column:')\n",
+    "zero_pop.isna().sum()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "45cb7b24",
+   "id": "6518e970",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "We observe that if the population is 0, most other values are missing. Therefore it makes sense to drop those rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e9b9bb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drop rows were TotalPop is 0\n",
+    "df = df[df.TotalPop != 0]"
    ]
   },
   {
@@ -413,13 +519,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffe7527b",
+   "metadata": {},
+   "source": [
+    "Idea: calculate the missing value for men from the value for total population and women and vice versa. We assume that each person is either a Man or a Woman."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bfabae60",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# check if there are columns where both 'Men' and 'Women' is missing\n",
+    "len(df[(df.Men.isna()) & (df.Women.isna())])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4907f2",
+   "metadata": {},
+   "source": [
+    "There are no columns were both values are missing so we can proceed as planned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fe5e8e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "df['Men'] = df['Men'].fillna(df.TotalPop - df.Women)\n",
+    "df['Women'] = df['Women'].fillna(df.TotalPop - df.Men)"
    ]
   },
   {
@@ -459,7 +595,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "for key in ['Men', 'Women', 'Citizen', 'Employed']:\n",
+    "    df[key] = df[key] / df.TotalPop * 100"
    ]
   },
   {
@@ -488,7 +625,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code 1) 2)"
+    "# create working copy\n",
+    "df_tmp = df.copy(deep=True)\n",
+    "# drop columns\n",
+    "df_tmp = df_tmp.drop(['State', 'County'], axis=1)"
    ]
   },
   {
@@ -498,7 +638,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code 3)"
+    "# scale data with standard scaler\n",
+    "x = df_tmp.values # returns numpy array\n",
+    "standard_scaler = StandardScaler()\n",
+    "x_scaled = standard_scaler.fit_transform(x)"
    ]
   },
   {
@@ -508,27 +651,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code 4)"
+    "# fill NaN values via knn-imputation\n",
+    "knn_imputer = KNNImputer(n_neighbors=5)\n",
+    "x_imputed = knn_imputer.fit_transform(x_scaled)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5049e85c",
+   "id": "f7117432",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code 5)"
+    "# rescale data\n",
+    "x_rescaled = standard_scaler.inverse_transform(x_imputed)\n",
+    "df_tmp = pd.DataFrame(x_rescaled, index=df_tmp.index, columns=df_tmp.columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac10d388",
+   "id": "88088b26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code 6)"
+    "df_tmp['State'] = df['State']\n",
+    "df_tmp['County'] = df['County']\n",
+    "df = df_tmp"
    ]
   },
   {
@@ -573,7 +722,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# load coordinates dataset\n",
+    "coords = pd.read_csv('./dataset/coordinates.csv', index_col='GEOID')\n",
+    "# join both datasets\n",
+    "df = df.join(coords)\n",
+    "# drop 'USPS'\n",
+    "df = df.drop(['USPS'], axis=1)\n",
+    "df"
    ]
   },
   {
