--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -263,7 +263,7 @@
    "id": "279e874a",
    "metadata": {},
    "source": [
-    "The column 'Employed' shows total number of people whereas 'Unemployment' shows the percentage of unemployed people. Also the columns 'Men' and 'Women' are given as floating point numbers even though they are a total count and only integers make sense."
+    "The column 'Employed' shows total number of people being employed whereas 'Unemployment' shows the percentage of unemployed people. Also the columns 'Men' and 'Women' are given as floating point numbers even though they are a total count and only integers make sense."
    ]
   },
   {
@@ -495,7 +495,7 @@
    "outputs": [],
    "source": [
     "# drop rows were TotalPop is 0\n",
-    "df = df[df.TotalPop != 0]"
+    "df = df.loc[df.TotalPop != 0]"
    ]
   },
   {
@@ -783,7 +783,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "df[['Income', 'IncomePerCap']].plot.hist(bins=20, alpha=0.5)"
    ]
   },
   {
@@ -791,7 +792,7 @@
    "id": "325fd434",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "It is observable that the income is in general higher than the income per capita (PCI) and the PCI is more spread. This could be because countries with a high population have an overall high income but the income averaged over the population is not so high. "
    ]
   },
   {
@@ -840,7 +841,7 @@
    "id": "b83099ef",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "When we group multiple regions with diffent populations, the mean over the statistics depend on the population of the regions so that taking the mean over the percentages is only true, when the population of the regions is the same. This assumption however doen't (always) hold."
    ]
   },
   {
@@ -860,7 +861,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "df_plot = df.copy()"
    ]
   },
   {
@@ -881,7 +883,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "df_plot = df_plot.assign(IncomeClass=pd.qcut(df_plot['Income'], \n",
+    "                                             [0, 0.33, 0.66, 1], \n",
+    "                                             ['low', 'medium', 'high']))"
    ]
   },
   {
@@ -902,11 +907,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ac0d3ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plot['Men'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6ac57485",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "df_plot = df_plot[['Men', 'Women', 'Hispanic', 'White', 'Black', 'Native', 'Asian', 'Pacific', 'Poverty', 'ChildPoverty', 'Professional', 'Service', 'Office', 'Construction', 'Production','Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp', 'WorkAtHome','MeanCommute', 'Employed', 'PrivateWork', 'PublicWork', 'SelfEmployed','FamilyWork', 'Unemployment', 'IncomeClass']]"
    ]
   },
   {
@@ -926,7 +942,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "mpl.pyplot.figure(figsize=(25,12), dpi=120)\n",
+    "plot = pd.plotting.parallel_coordinates(df_plot, 'IncomeClass', alpha=0.3, color=[\"green\", \"violet\", \"blue\"])\n",
+    "plot.tick_params(axis='x', labelrotation=90)\n",
+    "plt.show()\n",
+    "# comment: rotate label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4824fc1",
+   "metadata": {},
+   "source": [
+    "Most observations aren't interesting and obvious like the negative correlation between men and women. Also the correlations in groups of the same category like \"drive\" and \"Carpool\" are obvious because if many people drive, they don't make use of carpools, which implies a negative correlation in this case.\n",
+    "Meaningful Obervations: \n",
+    "- positive correlation between the amount of production in an area and people driving\n",
+    "\n",
+    "#comment: maybe add more observations\n"
    ]
   },
   {
@@ -960,7 +993,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# your code\n",
+    "df.head()\n",
+    "\n",
+    "# Create projection\n",
+    "proj = ccrs.PlateCarree()\n",
+    "\n",
+    "# Colormap\n",
+    "cmap = mpl.cm.get_cmap('RdYlGn')\n",
+    "# Normalization\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=df['Income'].max())\n",
+    "# Get colors according to color map specification above\n",
+    "np_col = cmap(norm(df['Income']))\n",
+    "\n",
+    "# Compute the circle size\n",
+    "# To show you \n",
+    "size_scaler = MinMaxScaler()\n",
+    "np_size = 600 * size_scaler.fit_transform(df[['TotalPop']])\n",
+    "\n",
+    "# Create figure\n",
+    "fig = plt.figure(figsize=(10, 10))\n",
+    "ax = fig.add_subplot(111, projection=proj)\n",
+    "ax.add_feature(cfeature.BORDERS)\n",
+    "ax.add_feature(cfeature.STATES)\n",
+    "ax.set_extent([-125, -66.5, 20, 50])\n",
+    "ax.scatter(df['INTPTLONG'], df['INTPTLAT'], color=np_col, s=np_size, marker='o')\n",
+    "\n",
+    "# Add colorbar to the plot\n",
+    "divider = make_axes_locatable(ax)\n",
+    "cax = divider.new_horizontal(size='5%', pad=0.2, axes_class=plt.Axes)\n",
+    "fig.add_axes(cax)\n",
+    "cbar = fig.colorbar(mpl.cm.ScalarMappable(norm=norm, cmap=cmap),\n",
+    "             cax=cax, orientation='vertical')\n",
+    "cbar.set_label('Power in kw', rotation=270)\n",
+    "# Figure title\n",
+    "fig.suptitle('Charging Stations in Aachen')\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e05ddfed",
+   "metadata": {},
+   "source": [
+    "We can observe that in most larger cities, the income is high. In the inner country, with cities with lower populations, the income is in general lower. An exception is the state of Florida, where the overall income seems to be low, even though there are some big cities like Orlando and Miami."
    ]
   },
   {
