work on Question 4 - Text Mining

--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -57,7 +57,7 @@
     "### Data Handline\n",
     "import pandas as pd\n",
     "# avoid collapsed view for pandas dataframes\n",
-    "pd.set_option('display.max_rows', 500)\n",
+    "pd.set_option('display.max_rows', 1000)\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)\n",
     "import numpy as np\n",
@@ -89,6 +89,7 @@
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -107,6 +108,8 @@
     "from nltk.lm.preprocessing import padded_everygram_pipeline\n",
     "from nltk.lm import MLE\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
+    "# nltk.download('stopwords')\n",
+    "# nltk.download('wordnet')\n",
     "\n",
     "### PM4Py\n",
     "import pm4py\n",
@@ -785,7 +788,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "df[['Income', 'IncomePerCap']].plot.hist(bins=20, alpha=0.5)"
    ]
   },
@@ -794,7 +796,10 @@
    "id": "325fd434",
    "metadata": {},
    "source": [
-    "It is observable that the income is in general higher than the income per capita (PCI) and the PCI is more spread. This could be because countries with a high population have an overall high income but the income averaged over the population is not so high. "
+    "It is observable that the income is in general higher than the income per capita (PCI) and the PCI is more spread. This could be because counties with a high population have an overall high income but the income averaged over the population is not so high. \n",
+    "\n",
+    "\n",
+    "*income is median household income, pci is totalincome/capita so mean income*"
    ]
   },
   {
@@ -825,7 +830,11 @@
     "    df_tmp = df_tmp.groupby(['State', 'County'], observed=True).sum()\n",
     "    df_tmp.loc[idx[:, l_col]] = df_tmp.loc[idx[:, l_col]].div(df_tmp['TotalPop'], axis=0)\n",
     "    \n",
-    "    return df_tmp\n"
+    "    return df_tmp\n",
+    "\n",
+    "# multiply by totalPop (compute absolute value)\n",
+    "# group by state county\n",
+    "# divide by totalpop"
    ]
   },
   {
@@ -843,7 +852,9 @@
    "id": "b83099ef",
    "metadata": {},
    "source": [
-    "When we group multiple regions with diffent populations, the mean over the statistics depend on the population of the regions so that taking the mean over the percentages is only true, when the population of the regions is the same. This assumption however doen't (always) hold."
+    "When we group multiple regions with different populations, the mean over the statistics depend on the population of the regions so that taking the mean over the percentages is only true, when the population of the regions is the same. This assumption however doen't (always) hold.\n",
+    "\n",
+    "*why would the same region have different number of totalPop?*"
    ]
   },
   {
@@ -851,7 +862,7 @@
    "id": "94bd4125",
    "metadata": {},
    "source": [
-    "**c)** Next, you should create an overview over column correlations particularly consideirng high/medium/and low incomes.\n",
+    "**c)** Next, you should create an overview over column correlations particularly considering high/medium/and low incomes.\n",
     "\n",
     "1) Create a copy `df_plot` of the aggregated dataframe."
    ]
@@ -863,8 +874,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
-    "df_plot = df.copy()"
+    "df_plot = df.copy(deep=True)"
    ]
   },
   {
@@ -885,7 +895,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "df_plot = df_plot.assign(IncomeClass=pd.qcut(df_plot['Income'], \n",
     "                                             [0, 0.33, 0.66, 1], \n",
     "                                             ['low', 'medium', 'high']))"
@@ -923,7 +932,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "df_plot = df_plot[['Men', 'Women', 'Hispanic', 'White', 'Black', 'Native', 'Asian', 'Pacific', 'Poverty', 'ChildPoverty', 'Professional', 'Service', 'Office', 'Construction', 'Production','Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp', 'WorkAtHome','MeanCommute', 'Employed', 'PrivateWork', 'PublicWork', 'SelfEmployed','FamilyWork', 'Unemployment', 'IncomeClass']]"
    ]
   },
@@ -944,11 +952,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "mpl.pyplot.figure(figsize=(25,12), dpi=120)\n",
     "plot = pd.plotting.parallel_coordinates(df_plot, 'IncomeClass', alpha=0.3, color=[\"green\", \"violet\", \"blue\"])\n",
     "plot.tick_params(axis='x', labelrotation=90)\n",
-    "plt.show()\n",
+    "plt.show()x\n",
     "# comment: rotate label"
    ]
   },
@@ -960,8 +967,10 @@
     "Most observations aren't interesting and obvious like the negative correlation between men and women. Also the correlations in groups of the same category like \"drive\" and \"Carpool\" are obvious because if many people drive, they don't make use of carpools, which implies a negative correlation in this case.\n",
     "Meaningful Obervations: \n",
     "- positive correlation between the amount of production in an area and people driving\n",
-    "\n",
-    "#comment: maybe add more observations\n"
+    "- negative correlation between Poverty and Professional Workers, same for child poverty\n",
+    "- positive correlation between Poverty and service workers\n",
+    "- positive correlation between poverty and amount of black people\n",
+    "- negative correlation between unemployment and amount of white people + asian people\n"
    ]
   },
   {
@@ -995,7 +1004,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "df.head()\n",
     "\n",
     "# Create projection\n",
@@ -1027,9 +1035,9 @@
     "fig.add_axes(cax)\n",
     "cbar = fig.colorbar(mpl.cm.ScalarMappable(norm=norm, cmap=cmap),\n",
     "             cax=cax, orientation='vertical')\n",
-    "cbar.set_label('Power in kw', rotation=270)\n",
+    "cbar.set_label('Median Household Income', rotation=270)\n",
     "# Figure title\n",
-    "fig.suptitle('Charging Stations in Aachen')\n",
+    "fig.suptitle('Median Household Income in Counties of the US')\n",
     "fig.tight_layout()\n",
     "\n",
     "plt.show()"
@@ -1040,7 +1048,9 @@
    "id": "e05ddfed",
    "metadata": {},
    "source": [
-    "We can observe that in most larger cities, the income is high. In the inner country, with cities with lower populations, the income is in general lower. An exception is the state of Florida, where the overall income seems to be low, even though there are some big cities like Orlando and Miami."
+    "We can observe that in most larger cities, the income is high. In the inner country, with cities with lower populations, the income is in general lower. An exception is the state of Florida, where the overall income seems to be low, even though there are some big cities like Orlando and Miami. We can also see that more people live in the East while especially northern states have low populations.\n",
+    "\n",
+    "*arent there quite some big green points in FLorida?*"
    ]
   },
   {
@@ -1080,9 +1090,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
-    "custemer_data = pd.read_csv('./dataset/customer_data.csv')\n",
-    "customer_data_sample = custemer_data.sample(frac=0.9, random_state=427492)\n",
+    "customer_data = pd.read_csv('./dataset/customer_data.csv')\n",
+    "customer_data_sample = customer_data.sample(frac=0.9, random_state=427492)\n",
     "customer_data_sample.to_csv('./dataset/customer_data_2.csv')\n",
     "customer_data_sample.head()"
    ]
@@ -1112,7 +1121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "customer_data_sample = pd.read_csv('./dataset/customer_data_2.csv')\n",
     "customer_data_onehot = pd.get_dummies(customer_data_sample)\n",
     "customer_data_onehot = customer_data_onehot.rename(columns={'Unnamed: 0': 'ID'}).set_index(\"ID\")\n",
@@ -1136,7 +1144,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "frequent_itemsets = apriori(customer_data_onehot, min_support = 0.3, use_colnames = True)\n",
     "frequent_itemsets['length'] = frequent_itemsets['itemsets'].apply(lambda x: len(x)) \n",
     "frequent_itemsets = frequent_itemsets[frequent_itemsets['length'] >= 3]\n",
@@ -1168,7 +1175,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code (join function)\n",
     "def join(itemsets_k):\n",
     "    k = len(itemsets_k[0])\n",
     "    extended_sets = []\n",
@@ -1188,7 +1194,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code (prune function)\n",
     "def prune(itemsets_k, itemsets_k1):\n",
     "    k = len(itemsets_k[0])\n",
     "    freq_itemsets = []\n",
@@ -1234,7 +1239,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "support_vals=[0.02, 0.04, 0.08, 0.16, 0.32]\n",
     "plot_data = []\n",
     "\n",
@@ -1270,7 +1274,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "ax = plt.gca()\n",
     "\n",
     "for col in ['before prune', 'after prune', 'apriori']:\n",
@@ -1339,8 +1342,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
-    "\n",
     "assoc_rules = arule(frequent_itemsets, metric = 'confidence', min_threshold = 0.6)\n",
     "display(assoc_rules)"
    ]
@@ -1360,7 +1361,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code\n",
     "(assoc_rules.sort_values('lift', ascending=False))[0:3]"
    ]
   },
@@ -1396,7 +1396,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# load datasets\n",
+    "hp_1 = pd.read_csv('./dataset/hp_1.csv')\n",
+    "hp_2 = pd.read_csv('./dataset/hp_2.csv')\n",
+    "hp_3 = pd.read_csv('./dataset/hp_3.csv')\n",
+    "\n",
+    "# strip leading and trailing whitespaces and convert to lower case \n",
+    "hp_1 = hp_1.applymap(lambda x : x.strip().lower())\n",
+    "hp_2 = hp_2.applymap(lambda x : x.strip().lower())\n",
+    "hp_3 = hp_3.applymap(lambda x : x.strip().lower())\n",
+    "\n",
+    "# compute characters that appear in each of the datasets\n",
+    "from functools import reduce\n",
+    "print(reduce(np.intersect1d, (hp_1['Character'], hp_2['Character'], hp_3['Character'])))"
    ]
   },
   {
@@ -1416,10 +1428,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf353ebe",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "# your code"
+    "hp_df = pd.concat([hp_1, hp_2, hp_3])\n",
+    "hp_df = hp_df.loc[hp_df['Character'].isin(['harry', 'hermione', 'dumbledore', 'snape'])]\n",
+    "hp_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a196a9f",
+   "metadata": {},
+   "source": [
+    "Note: We neglect the typo in 'hermoine' and examples with multiple people. The number of occurences of these are very low so this should be okay."
    ]
   },
   {
@@ -1437,7 +1461,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "hp_sampled = hp_df.sample(frac=0.9, random_state=427492)\n",
+    "hp_sampled.to_csv('./dataset/hp_sampled.csv')"
    ]
   },
   {
@@ -1459,11 +1484,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c76e0c8",
+   "id": "99cedff7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "# rename index so no id appears multiple times\n",
+    "hp_processed = hp_sampled.set_axis(range(len(hp_sampled)))\n",
+    "\n",
+    "s = hp_processed.Sentence.map(sent_tokenize).apply(pd.Series, 1).stack()\n",
+    "s.index = s.index.droplevel(-1) # to line up with df's index\n",
+    "s.name = 'Sentence' # needs a name to join\n",
+    "del hp_processed['Sentence']\n",
+    "hp_processed = hp_processed.join(s)"
    ]
   },
   {
@@ -1481,7 +1513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "train, test = train_test_split(hp_processed, test_size=0.2, random_state=427492, stratify=hp_processed.Character)"
    ]
   },
   {
@@ -1499,15 +1531,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "tokenizer = nltk.RegexpTokenizer(r\"\\w+\")\n",
+    "stop_list = stopwords.words(\"english\")\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "def preprocess(sentences):\n",
+    "    corpus = []\n",
+    "\n",
+    "    for sentence in sentences:\n",
+    "        tokenized = tokenizer.tokenize(sentence)\n",
+    "        filtered = [word.lower() for word in tokenized if word.lower() not in stop_list]\n",
+    "        lemmatized = [lemmatizer.lemmatize(word) for word in filtered]\n",
+    "        corpus.append(lemmatized)\n",
+    "    \n",
+    "    return corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaa72e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_train = preprocess(train.Sentence)\n",
+    "corpus_test = preprocess(test.Sentence)\n",
+    "\n",
+    "count_vect = CountVectorizer()\n",
+    "count_vect.fit(pd.Series([' '.join(s) for s in corpus_train]))\n",
+    "\n",
+    "train_count_matrix = count_vect.transform(pd.Series([' '.join(s) for s in corpus_train]))\n",
+    "test_count_matrix = count_vect.transform(pd.Series([' '.join(s) for s in corpus_test]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cc5feed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_vect.vocabulary_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f06c5a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Creating classifier')\n",
+    "\n",
+    "classifier = LogisticRegression()\n",
+    "\n",
+    "train_vectors = train_count_matrix\n",
+    "train_target = train.Character\n",
+    "\n",
+    "test_vectors = test_count_matrix\n",
+    "test_target = test.Character\n",
+    "\n",
+    "classifier = classifier.fit(X=train_vectors, y=train_target)\n",
+    "\n",
+    "print('Evaluating model on test set')\n",
+    "\n",
+    "print('Classifier accuracy on test set:')\n",
+    "print(classifier.score(test_vectors, test_target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97dd8928",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "predictions = classifier_doc2vec.predict(test_vectors)\n",
+    "confusion_matrix(test.Character, predictions, labels=['harry', 'hermione', 'dumbledore', 'snape'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63550e5f",
+   "id": "12deeaad",
    "metadata": {},
    "source": [
-    "*Your markdown for your discussion.*"
+    "The performance of the logistic classifier is pretty poor with 56% accuracy. Especially considering, that the classifier learns that the character Harry has more occurences in the data. This is probably due to the sparseness of the data. It is very unlikely that similar sentences appear multiple times, especially since similar words cannot be determined from the count matrix representation. Also most sentences have barely any words because of the stopwaord removal."
    ]
   },
   {
@@ -1532,17 +1643,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d919160",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code"
+    "# create TaggedDocument\n",
+    "tagged_docs_train = [TaggedDocument(doc, [i]) for i, doc in enumerate(corpus_train)]\n",
+    "\n",
+    "# determining parameters of the model   \n",
+    "model = Doc2Vec(vector_size=8, min_count=3)\n",
+    "\n",
+    "# building the vocabulary    \n",
+    "model.build_vocab(tagged_docs_train)\n",
+    "\n",
+    "training_examples = model.corpus_count\n",
+    "\n",
+    "# document embedding, train the model on the training examples (docs)\n",
+    "model.train(corpus_iterable=tagged_docs_train, total_examples=training_examples, epochs=100)"
    ]
   },
   {
@@ -1552,7 +1665,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "print('Creating classifier')\n",
+    "\n",
+    "classifier_doc2vec = LogisticRegression()\n",
+    "\n",
+    "train_vectors = [model.infer_vector(doc) for doc in corpus_train]\n",
+    "train_target = train['Character']\n",
+    "\n",
+    "test_vectors = [model.infer_vector(doc) for doc in corpus_test]\n",
+    "test_target = test['Character']\n",
+    "\n",
+    "classifier_doc2vec = classifier_doc2vec.fit(X=train_vectors, y=train_target)\n",
+    "\n",
+    "print('Evaluating model on test set')\n",
+    "\n",
+    "print('doc2vec - Classifier accuracy on test set:')\n",
+    "print(classifier_doc2vec.score(test_vectors, test_target))"
    ]
   },
   {
@@ -1569,11 +1697,60 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ccee916",
+   "id": "51a30877",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "def preprocess_simple(sentences):\n",
+    "    corpus = []\n",
+    "    for sentence in sentences:\n",
+    "        tokenized = tokenizer.tokenize(sentence)\n",
+    "        filtered = [word.lower() for word in tokenized]\n",
+    "        corpus.append(filtered)\n",
+    "\n",
+    "    return corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5680b796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "characters = ['harry', 'hermione', 'dumbledore', 'snape']\n",
+    "\n",
+    "hp_data = [hp_processed[hp_processed.Character == c] for c in characters]\n",
+    "hp_corpora = [preprocess_simple(d.Sentence) for d in hp_data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db3fb862",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_lm(n,corpus):\n",
+    "    # the padded_everygram_pipeline goes through the corpus, applies left and right padding to the sentences (adding <s> and </s>)\n",
+    "    # and obtains the tuples of a given order together with the vocabulary\n",
+    "    padded_tuples, vocab = padded_everygram_pipeline(n, corpus)\n",
+    "    # generate (an empty) ngram language model for some n>0\n",
+    "    lm = MLE(n)\n",
+    "    # generate probabilities (model) given the list of n-grams and the vocabulary\n",
+    "    lm.fit(padded_tuples, vocab)\n",
+    "    \n",
+    "    return lm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651b0f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigrams = [build_lm(2, corpus) for corpus in hp_corpora]"
    ]
   },
   {
@@ -1591,7 +1768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "for i in range(len(characters)):\n",
+    "    print('{}:\\t {}'.format(characters[i], ' '.join(bigrams[i].generate(10))))"
    ]
   },
   {
@@ -1609,7 +1787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "fourgrams = [build_lm(4, corpus) for corpus in hp_corpora]"
    ]
   },
   {
@@ -1627,7 +1805,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code"
+    "for i in range(len(characters)):\n",
+    "    print('{}:\\t {}'.format(characters[i], ' '.join(fourgrams[i].generate(10))))"
    ]
   },
   {
