work on Question 6

--- a/Assignment 2/assignment_2.ipynb
+++ b/Assignment 2/assignment_2.ipynb
@@ -2398,7 +2398,7 @@
    "outputs": [],
    "source": [
     "# your code\n",
-    "SUM_MAT_NUM = 154031 \n",
+    "SUM_MAT_NUM = 427492 + 378959 + 368924\n",
     "NUM_REPITITION=10\n",
     "generate_log(original_log,NUM_REPITITION,SUM_MAT_NUM)"
    ]
@@ -2427,9 +2427,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code\n",
     "from IPython.display import Image\n",
-    "# Image(filename='your_path_to_screenshot_of_a1')"
+    "Image(filename='images/a1.png')"
    ]
   },
   {
@@ -2439,8 +2438,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code\n",
-    "#Image(filename='your_path_to_screenshot_of_a2') "
+    "Image(filename='images/a2.png')"
    ]
   },
   {
@@ -2450,8 +2448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code\n",
-    "#Image(filename='your_path_to_screenshot_of_a3') "
+    "Image(filename='images/a3.png')"
    ]
   },
   {
@@ -2461,8 +2458,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code\n",
-    "#Image(filename='your_path_to_screenshot_of_a4') "
+    "Image(filename='images/a4.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "466f4d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(filename='images/a5.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a712b35e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(filename='images/a6.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63a84b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#b411303ba3ee"
    ]
   },
   {
